--- a/index.html
+++ b/index.html
@@ -40,5 +40,21 @@
           </div>
         </nav>
       </header>  
+
+      <main>
+        <!-- Hero section -->
+        <section class="hero-container">
+          <div class="hero-left">
+            <img
+              src="./images/banner.jpg"
+              alt="Banner image of three people sitting together"
+            />
+          </div>
+          <div class="hero-right">
+            <h1>Learn something new everyday</h1>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+            <a href=""><button>Start here</button></a>
+          </div>
+        </section>
 </body>
 </html>
