Adding the News section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="hero-left">
             <img
               src="./images/banner.jpg"
-              alt="Banner image of three people sitting together"
+              alt="Banner image of three students sitting together"
             />
           </div>
           <div class="hero-right">
@@ -56,5 +56,82 @@
             <a href=""><button>Start here</button></a>
           </div>
         </section>
+<!-- News section -->
+<section class="news-container">
+  <article class="news-left">
+    <img src="./images/information-main.jpg" alt="A men reading a book" />
+    <div class="news-left-info">
+      <h2>It doesn't hurt to keep practicing</h2>
+      <p>
+        "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+        commodo lectus, nec consequat neque. Sed non accumsan urna.
+        Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+        dolor consequat, tristique ligula."
+      </p>
+      <p>Emanuel, Sr Strategist at Hiring.com</p>
+    </div>
+  </article>
+  <section class="news-right">
+    <div class="orientation">
+      <div class="orientation-img">
+        <img
+          class="orientation-left-desktop"
+          src="./images/information-orientation.jpg"
+          alt="Shadows of a few people"
+        />
+        <img
+          class="orientation-left-mobile"
+          src="./images/information-orientation-mobile.jpg"
+          alt="Shadows of a few people"
+        />
+      </div>
+      <div class="orientation-info">
+        <h4>Orientation date</h4>
+        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+        <button><a href="">Read more</a></button>
+      </div>
+    </div>
+    <div class="campus">
+      <div class="campus-img">
+        <img
+          class="campus-left-desktop"
+          src="./images/information-campus.jpg"
+          alt="A group of people sitting around the table"
+        />
+        <img
+          class="campus-left-mobile"
+          src="./images/information-campus-mobile.jpg"
+          alt="A group of people sitting around the table"
+        />
+      </div>
+      <div class="campus-info">
+        <h4>Our campus</h4>
+        <p>Find which campus is close by you</p>
+        <button><a href="">Read more</a></button>
+      </div>
+    </div>
+    <div class="guest">
+      <div class="guest-img">
+        <img
+          class="guest-left-desktop"
+          src="./images/information-guest-lecture.jpg"
+          alt="Portrait of a professor"
+        />
+        <img
+          class="guest-left-mobile"
+          src="./images/information-guest-lecture-mobile.jpg"
+          alt="Portrait of a professor"
+        />
+      </div>
+      <div class="guest-info">
+        <h4>Our guest lecture</h4>
+        <p>
+          Join a keynote with Oliver Sack about music in medical treatment
+        </p>
+        <button><a href="">Read more</a></button>
+      </div>
+    </div>
+  </section>
+</section>
 </body>
 </html>
