Adding the last section

--- a/index.html
+++ b/index.html
@@ -133,5 +133,172 @@
     </div>
   </section>
 </section>
+ <!-- Start Learning section -->
+ <section class="sl-container">
+  <h1>Start learning</h1>
+  <div class="sl-grid-wrapper">
+    <div class="sl-1">
+      <div class="sl-img">
+        <img
+          src="./images/course-software.jpg"
+          alt="Two computer screen on a table"
+        />
+      </div>
+      <div class="sl-info">
+        <h4>Software engineering</h4>
+        <p>COURSES</p>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
+      </div>
+    </div>
+    <div class="sl-2">
+      <div class="sl-img">
+        <img
+          src="./images/course-computer-art.jpg"
+          alt="Someone holding a mobile phone and another drinking coffee"
+        />
+      </div>
+      <div class="sl-info">
+        <h4>Computer art</h4>
+        <p>COURSES</p>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
+      </div>
+    </div>
+    <div class="sl-3">
+      <div class="sl-img">
+        <img
+          src="./images/course-design.jpg"
+          alt="A person holding a camera"
+        />
+      </div>
+      <div class="sl-info">
+        <h4>Design</h4>
+        <p>COURSES</p>
+        <p>User Experience Design, User Research, Visual Design</p>
+      </div>
+    </div>
+    <div class="sl-4">
+      <div class="sl-img">
+        <img
+          src="./images/course-data.jpg"
+          alt="A laptop with dashboard statistic displayed on screen"
+        />
+      </div>
+      <div class="sl-info">
+        <h4>Data</h4>
+        <p>COURSES</p>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+    </div>
+    <div class="sl-5">
+      <div class="sl-img">
+        <img
+          src="./images/course-business.jpg"
+          alt="Chess pieces on a table"
+        />
+      </div>
+      <div class="sl-info">
+        <h4>Business</h4>
+        <p>COURSES</p>
+        <p>Product Development, Business Development, Startup</p>
+      </div>
+    </div>
+    <div class="sl-6">
+      <div class="sl-img">
+        <img
+          src="./images/course-marketing.jpg"
+          alt="Someone using apple watch wrapped around their wrist"
+        />
+      </div>
+      <div class="sl-info">
+        <h4>Marketing</h4>
+        <p>COURSES</p>
+        <p>Analytics, Content Marketing, Mobile Marketing</p>
+      </div>
+    </div>
+  </div>
+  <div class="sl-mobile">
+    <a href=""
+      ><div class="sl-1-mobile">
+        <h1>Software engineering</h1>
+      </div></a
+    >
+    <a href=""
+      ><div class="sl-2-mobile">
+        <h1>Computer art</h1>
+      </div></a
+    >
+    <a href=""
+      ><div class="sl-3-mobile">
+        <h1>Design</h1>
+      </div></a
+    >
+    <a href=""
+      ><div class="sl-4-mobile"><h1>Data</h1></div></a
+    >
+    <a href=""
+      ><div class="sl-5-mobile"><h1>Business</h1></div></a
+    >
+    <a href=""
+      ><div class="sl-6-mobile"><h1>Marketing</h1></div></a
+    >
+  </div>
+</section>
+<!-- Thesis exhibit section -->
+<section class="thesis-container">
+  <h1>Thesis exhibit</h1>
+  <div class="thesis-grid">
+    <article class="urban-container">
+      <div class="urban-video">
+        <video src="./videos/thesis.mp4" controls></video>
+      </div>
+      <div class="urban-info">
+        <h4>Reimagine urban</h4>
+        <p>
+          "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+          commodo lectus, nec consequat neque. Sed non accumsan urna.
+          Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+          dolor consequat, tristique ligula."
+        </p>
+      </div>
+    </article>
+    <article class="other-thesis-container">
+      <div class="fisma">
+        <div class="fisma-img">
+          <img
+            src="./images/thesis-fisma.jpg"
+            alt="Someone highlighting text on paper"
+          />
+        </div>
+        <div class="fisma-info">
+          <h4>Fisma: Design and Prototype</h4>
+          <p>Designer showcase of new prototype product</p>
+        </div>
+      </div>
+      <div class="now-and-then">
+        <div class="nt-img">
+          <img
+            src="./images/thesis-now-and-then.jpg"
+            alt="Image of empire state building"
+          />
+        </div>
+        <div class="nt-info">
+          <h4>Now and then</h4>
+          <p>Research study about New York</p>
+        </div>
+      </div>
+    </article>
+  </div>
+</section>
+<!-- Footer section -->
+<footer>
+  <p>@ 2016 Colmar Academy. All rights reserved</p>
+  <ul>
+    <a href=""><li>Terms</li></a>
+    <a href=""><li>Privacy</li></a>
+  </ul>
+</footer>
+</main>
+</body>
+</html>
 </body>
 </html>
