Updating the images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Navigation bar -->
         <nav>
           <div class="logo">
-            <img src="./images/ic-logo.svg" alt="Colmar academy logo" />
+            <img src="resources/images/ic-logo.svg" alt="Colmar academy logo" />
             <p>Colmar</p>
             <span>Academy</span>
           </div>
@@ -30,13 +30,13 @@
           </ul>
           <div class="mobile-nav">
             <a href="#"
-              ><img src="./images/ic-logo.svg" alt="Colmar academy logo"
+              ><img src="resources/images/ic-logo.svg" alt="Colmar academy logo"
             /></a>
             <a href="#"
-              ><img src="./images/ic-on-campus.svg" alt="On Campus icon"
+              ><img src="resources/images/ic-on-campus.svg" alt="On Campus icon"
             /></a>
-            <a href=""><img src="./images/ic-online.svg" alt="Online icon" /></a>
-            <a href=""><img src="./images/ic-login.svg" alt="Login icon" /></a>
+            <a href="#"><img src="resources/images/ic-online.svg" alt="Online icon" /></a>
+            <a href="#"><img src="resources/images/ic-login.svg" alt="Login icon" /></a>
           </div>
         </nav>
       </header>  
@@ -46,7 +46,7 @@
         <section class="hero-container">
           <div class="hero-left">
             <img
-              src="./images/banner.jpg"
+              src="resources/images/banner.jpg"
               alt="Banner image of three students sitting together"
             />
           </div>
@@ -59,7 +59,7 @@
 <!-- News section -->
 <section class="news-container">
   <article class="news-left">
-    <img src="./images/information-main.jpg" alt="A men reading a book" />
+    <img src="resources/images/information-main.jpg" alt="A men reading a book" />
     <div class="news-left-info">
       <h2>It doesn't hurt to keep practicing</h2>
       <p>
@@ -76,12 +76,12 @@
       <div class="orientation-img">
         <img
           class="orientation-left-desktop"
-          src="./images/information-orientation.jpg"
+          src="resources/images/information-orientation.jpg"
           alt="Shadows of a few people"
         />
         <img
           class="orientation-left-mobile"
-          src="./images/information-orientation-mobile.jpg"
+          src="resources/images/information-orientation-mobile.jpg"
           alt="Shadows of a few people"
         />
       </div>
@@ -95,12 +95,12 @@
       <div class="campus-img">
         <img
           class="campus-left-desktop"
-          src="./images/information-campus.jpg"
+          src="resources/images/information-campus.jpg"
           alt="A group of people sitting around the table"
         />
         <img
           class="campus-left-mobile"
-          src="./images/information-campus-mobile.jpg"
+          src="resources/images/information-campus-mobile.jpg"
           alt="A group of people sitting around the table"
         />
       </div>
@@ -114,12 +114,12 @@
       <div class="guest-img">
         <img
           class="guest-left-desktop"
-          src="./images/information-guest-lecture.jpg"
+          src="resources/images/information-guest-lecture.jpg"
           alt="Portrait of a professor"
         />
         <img
           class="guest-left-mobile"
-          src="./images/information-guest-lecture-mobile.jpg"
+          src="resources/images/information-guest-lecture-mobile.jpg"
           alt="Portrait of a professor"
         />
       </div>
@@ -140,7 +140,7 @@
     <div class="sl-1">
       <div class="sl-img">
         <img
-          src="./images/course-software.jpg"
+          src="resources/images/course-software.jpg"
           alt="Two computer screen on a table"
         />
       </div>
@@ -153,7 +153,7 @@
     <div class="sl-2">
       <div class="sl-img">
         <img
-          src="./images/course-computer-art.jpg"
+          src="resources/images/course-computer-art.jpg"
           alt="Someone holding a mobile phone and another drinking coffee"
         />
       </div>
@@ -166,7 +166,7 @@
     <div class="sl-3">
       <div class="sl-img">
         <img
-          src="./images/course-design.jpg"
+          src="resources/images/course-design.jpg"
           alt="A person holding a camera"
         />
       </div>
@@ -179,7 +179,7 @@
     <div class="sl-4">
       <div class="sl-img">
         <img
-          src="./images/course-data.jpg"
+          src="resources/images/course-data.jpg"
           alt="A laptop with dashboard statistic displayed on screen"
         />
       </div>
@@ -192,7 +192,7 @@
     <div class="sl-5">
       <div class="sl-img">
         <img
-          src="./images/course-business.jpg"
+          src="resources/images/course-business.jpg"
           alt="Chess pieces on a table"
         />
       </div>
@@ -205,7 +205,7 @@
     <div class="sl-6">
       <div class="sl-img">
         <img
-          src="./images/course-marketing.jpg"
+          src="resources/images/course-marketing.jpg"
           alt="Someone using apple watch wrapped around their wrist"
         />
       </div>
@@ -265,7 +265,7 @@
       <div class="fisma">
         <div class="fisma-img">
           <img
-            src="./images/thesis-fisma.jpg"
+            src="resources/images/thesis-fisma.jpg"
             alt="Someone highlighting text on paper"
           />
         </div>
@@ -277,7 +277,7 @@
       <div class="now-and-then">
         <div class="nt-img">
           <img
-            src="./images/thesis-now-and-then.jpg"
+            src="resources/images/thesis-now-and-then.jpg"
             alt="Image of empire state building"
           />
         </div>
